--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 </div>
 </div>
 
-<div class="container-fluid block-subscribe">
+<!-- <div class="container-fluid block-subscribe">
   <div class="container">
     <div class="row align-items-center" style="padding: 30px 0;">
       <div class="col-md-6">
@@ -592,7 +592,7 @@
       </div>
     </div>
     </div>
-  </div>
+  </div> -->
 
 
 <div class="container-fluid getin_touch py-indent">
@@ -650,14 +650,15 @@
     <h3>Services</h3>
     <ul class="footer_nav">
       <li>
-        <a href="web3-game-development.html">Web3 Game Development</a>
+        <a href="mobilegamedevelopment.html">Mobile Game Development</a>
+      </li>
+      <li>
+        <a href="html5-game-development.html">HTML5 Game Development</a>
       </li>
       <li>
         <a href="desktop-game-development-company.html">Desktop Game Development</a>
       </li>
-      <li>
-        <a href="mobilegamedevelopment.html">Mobile Game Development</a>
-      </li>
+      
     </ul>
   </div>
   
@@ -667,14 +668,15 @@
     <h3>Technologies</h3>
     <ul class="footer_nav">
       <li>
-        <a href="nodeJS-game-server.html">NodeJS Game Server</a>
+        <a href="unity3D-game-development.html">Unity3D</a>
+        </li>
+      <li>
+        <a href="html5-game-development.html">HTML5</a>
       </li>
       <li>
-        <a href="html5-game-development.html">HTML5 Game Development</a>
+        <a href="nodeJS-game-server.html">NodeJS</a>
       </li>
-      <li>
-        <a href="unity3D-game-development.html">Unity3D Game Development</a>
-      </li>
+      
     </ul>
   </div>
   
@@ -684,16 +686,16 @@
     <h3>Art & Design</h3>
     <ul class="footer_nav">
       <li>
-        <a href="animations.html">Animations</a>
-      </li>
-      <li>
-        <a href="character-design.html">Character Design</a>
+        <a href="concept-design.html">Concept Design</a>
       </li>
       <li>
         <a href="ui-ux-design.html">UI/UX Design</a>
       </li>
       <li>
-        <a href="concept-design.html">Concept Design</a>
+        <a href="character-design.html">Character Design</a>
+      </li>
+      <li>
+        <a href="animations.html">Animations</a>
       </li>
     </ul>
   </div>
@@ -718,9 +720,6 @@
     <ul class="footer_nav">
       <li>
         <a href="#"><i class="fa fa-phone-alt"></i> +91 – 7878044044</a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-phone-alt"></i> +91 – 9116005587(HR)</a>
       </li>
       <li>
         <a href="#"><i class="fa fa-skype"></i> sales.mobzway</a>
