--- a/unity3D-game-development.html
+++ b/unity3D-game-development.html
@@ -466,26 +466,17 @@ Juego Studios is one of the leading Unity3D game development companies, with a t
 <!-- Footer -->
 
 
-<div class="container-fluid block-subscribe">
+<div class="container-fluid getin_touch py-indent">
   <div class="container">
-    <div class="row align-items-center" style="padding: 30px 0;">
-      <div class="col-md-6">
-        <div class="sub-title text-white"> <span class="color-accent"></span> STAY INFORMED</div>
-        <h2 class="block_title text-white mb-0" style="line-height: 1;margin-top: 5px;">Subscribe to our newsletter</h2>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h2 class="block_title" data-aos="fade-down">Start your business journey with Mobzway</h2>
+        <p class="">Try Our Games, and explore all the features and solutions you need to start, run, and grow your business.</p>
+        <button class="btn_all btn_try_demo" data-bs-toggle="modal" data-bs-target="#requestQoute">Try Demo <img src="assets/img/arrow-next.png" style="max-width: 14px;opacity: .4;position: relative;top: 1px;margin-left: 10px;filter: inherit;"></button>
       </div>
-      <div class="col-md-6">
-        <div class="d-flex">
-  <div class="mb-3 w-auto pe-2">
-    <input type="email" placeholder="mail@mail.com" class="form-control" id="subscribe">
-  </div>
-  <div class="mb-3 w-auto ps-2">
-    <button class="btn_all">Submit <img src="assets/img/arrow-next.png"></button>
+    </div>
   </div>
 </div>
-      </div>
-    </div>
-    </div>
-  </div>
 
 <footer class="container-fluid">
   <div class="container">
@@ -527,14 +518,15 @@ Juego Studios is one of the leading Unity3D game development companies, with a t
     <h3>Services</h3>
     <ul class="footer_nav">
       <li>
-        <a href="web3-game-development.html">Web3 Game Development</a>
+        <a href="mobilegamedevelopment.html">Mobile Game Development</a>
+      </li>
+      <li>
+        <a href="html5-game-development.html">HTML5 Game Development</a>
       </li>
       <li>
         <a href="desktop-game-development-company.html">Desktop Game Development</a>
       </li>
-      <li>
-        <a href="mobilegamedevelopment.html">Mobile Game Development</a>
-      </li>
+      
     </ul>
   </div>
   
@@ -544,14 +536,15 @@ Juego Studios is one of the leading Unity3D game development companies, with a t
     <h3>Technologies</h3>
     <ul class="footer_nav">
       <li>
-        <a href="nodeJS-game-server.html">NodeJS Game Server</a>
+        <a href="unity3D-game-development.html">Unity3D</a>
+        </li>
+      <li>
+        <a href="html5-game-development.html">HTML5</a>
       </li>
       <li>
-        <a href="html5-game-development.html">HTML5 Game Development</a>
+        <a href="nodeJS-game-server.html">NodeJS</a>
       </li>
-      <li>
-        <a href="unity3D-game-development.html">Unity3D Game Development</a>
-      </li>
+      
     </ul>
   </div>
   
@@ -561,16 +554,16 @@ Juego Studios is one of the leading Unity3D game development companies, with a t
     <h3>Art & Design</h3>
     <ul class="footer_nav">
       <li>
-        <a href="animations.html">Animations</a>
-      </li>
-      <li>
-        <a href="character-design.html">Character Design</a>
+        <a href="concept-design.html">Concept Design</a>
       </li>
       <li>
         <a href="ui-ux-design.html">UI/UX Design</a>
       </li>
       <li>
-        <a href="concept-design.html">Concept Design</a>
+        <a href="character-design.html">Character Design</a>
+      </li>
+      <li>
+        <a href="animations.html">Animations</a>
       </li>
     </ul>
   </div>
@@ -588,15 +581,13 @@ Juego Studios is one of the leading Unity3D game development companies, with a t
     </ul>
   </div>
 </div>
+
 <div class="col-md-4">
   <div class="contact-item">
     <h3>Get In Touch</h3>
     <ul class="footer_nav">
       <li>
         <a href="#"><i class="fa fa-phone-alt"></i> +91 – 7878044044</a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-phone-alt"></i> +91 – 9116005587(HR)</a>
       </li>
       <li>
         <a href="#"><i class="fa fa-skype"></i> sales.mobzway</a>
