--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -368,20 +368,32 @@
   <div class="container">
     <div class="row" style="padding-bottom: 90px;">
       <div class="col-md-4">
-  <div class="sub-title"> <span class="color-accent"></span> CONTACT US</div>
-  <h2 class="block_title"> We are just click away</h2>
+  <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> CONTACT US</div>
+  <h2 class="block_title" data-aos="fade-down"> We are just click away</h2>
   <div class="w-100">
+
     <form class="footer_form">
       <div class="d-flex">
   <div class="mb-3 w-50 pe-2">
-    <label for="fullname" class="form-label">Full name </label>
-    <input type="email" class="form-control" id="fullname" aria-describedby="emailHelp">
+    <label for="fullname" class="form-label">First name </label>
+    <input type="text" class="form-control" id="fullname" aria-describedby="emailHelp">
   </div>
   <div class="mb-3 w-50 ps-2">
-    <label for="email" class="form-label">E-mail</label>
-    <input type="email" class="form-control" id="email">
+    <label for="lastname" class="form-label">Last name</label>
+    <input type="text" class="form-control" id="lastname">
   </div>
 </div>
+<div class="d-flex">
+  <div class="mb-3 w-50 pe-2">
+    <label for="email" class="form-label">E-mail </label>
+    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+  </div>
+  <div class="mb-3 w-50 ps-2">
+    <label for="mobile" class="form-label">Mobile</label>
+    <input type="text" class="form-control" id="mobile">
+  </div>
+</div>
+
 <div class="mb-3">
     <label for="message" class="form-label">Message</label>
     <textarea rows="5" id="message" name="message" class="form-control" placeholder="Type message here..."></textarea>
