--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-      <h1 data-aos="fade-right">Best Poker, Rummy, Casino Gaming Solution</h1>
-      <h3 data-aos="fade-right">Our Platform. Your Success</h3>
-      <p data-aos="fade-up">Turn your ideas into profits! Start a new business or expand an existing one – Uplatform is your assured partner on the road to achieving your goals.</p>
+      <h1 data-aos="fade-right">One Stop Solution For your Gaming Business Idea</h1>
+      <h3 data-aos="fade-right">Your Idea . Our Experience & Expertise . A Successful Product</h3>
+      <p data-aos="fade-up">Turn your idea into a world class gaming product and Build a profitable business</p>
       <p data-aos="fade-up"><button class="btn_all">Request a demo <img src="assets/img/arrow-next.png"></button></p>
     </div>
       <!-- <div class="col-lg-6">
@@ -817,9 +817,9 @@ Area Jaipur, (Raj) India
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header flex-wrap text-center justify-content-center" style="background-color: #ffe8d7;border-top:2px solid #ff7f00">
-                <h3 class="modal-title w-100" id="exampleModalLongTitle"><span class="yellows">Want</span> to discuss your idea?</h3>
+                <h3 class="modal-title w-100" id="exampleModalLongTitle"><span class="yellows">Want</span> to discuss your game concept?</h3>
                 <p class="pup_cotent">
-                    We are too! fill out the form below and we'll contact you very shortly.
+                    We are too! fill out the form below and we'll contact you very soon.
                 </p>
                 <button type="button" class="close position-absolute" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
