--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div class="container-fluid banner banner-main">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-8">
       <h1 data-aos="fade-right">One Stop Solution For your Gaming Business Idea</h1>
       <h3 data-aos="fade-right">Your Idea . Our Experience & Expertise . A Successful Product</h3>
       <p data-aos="fade-up">Turn your idea into a world class gaming product and Build a profitable business</p>
@@ -138,7 +138,7 @@
   <div class="row sec_mt" style="padding-bottom:15px;">
     <div class="col-md-4" data-aos="fade-right">
       <div class="w-100 turnkey_content">
-        <h2><span><img src="assets/img/turnkey-svg.svg"></span>Turnkey</h2>
+        <h2><span><img src="assets/img/turnkey-svg.svg"></span>Mobile Games</h2>
         <p>Build a profitable and stable brand with an all-in-one solution:</p>
         <ul class="sec_list">
           <li>Build a profitable and stable brand with an all-in-one solution:</li>
@@ -151,7 +151,7 @@
 
     <div class="col-md-4" data-aos="fade-up">
       <div class="w-100 turnkey_content">
-        <h2><span><img src="assets/img/api-svg.svg"></span>Sportsbook API</h2>
+        <h2><span><img src="assets/img/api-svg.svg"></span>HTML5 Games</h2>
         <p>Want to expand your existing project? Our effective sportsboook API will provide you:</p>
         <ul class="sec_list">
           <li>Quick, straightforward and seamless API integration.</li>
@@ -163,7 +163,7 @@
     </div>
     <div class="col-md-4" data-aos="fade-left">
       <div class="w-100 turnkey_content">
-        <h2><span><img src="assets/img/Frame-body.svg"></span>Betshop solutions</h2>
+        <h2><span><img src="assets/img/Frame-body.svg"></span>Desktop Games</h2>
         <p>Take advantage of our knowledge of retail betting and the most comprehensive software:</p>
         <ul class="sec_list">
           <li>Complete software package and tools to operate land-based betting shops.</li>
