--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> SMOOTH AND EFFICIENT</div>
-        <h2 class="block_title" data-aos="fade-down">Unrivalled Solutions</h2>
+        <h2 class="block_title" data-aos="fade-down">Unmatched Solutions</h2>
     </div>
   </div>
   <div class="row sec_mt" style="padding-bottom:15px;">
