--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="sub-title text-white" data-aos="fade-up"> <span class="color-accent"></span>  BUSINESS DONE RIGHT</div>
+      <div class="sub-title text-white" data-aos="fade-up"> <span class="color-accent"></span>  Right Point to Start</div>
         <h2 class="block_title text-white mb-0" data-aos="fade-down">Why Mobzway</h2>
     </div>
   </div>
@@ -193,7 +193,7 @@
           <img src="assets/img/win-svg.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Ultimate sportsbook</h3>
+          <h3 class="text-white">Ultimate Expertise</h3>
           <p class="text-white">Attract all playing preferences with the most extensive coverage of sports, events, and markets. Let them bet on almost anything.</p>
         </div>
       </div>
@@ -204,7 +204,7 @@
           <img src="assets/img/disk-svg.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Massive casino collection</h3>
+          <h3 class="text-white">Massive Games</h3>
           <p class="text-white">Offer an enormous assortment, with access to the most diverse selection of casino and slot games.</p>
         </div>
       </div>
@@ -215,7 +215,7 @@
           <img src="assets/img/why-3.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Forget the hassle</h3>
+          <h3 class="text-white">Delivery Be hassle free</h3>
           <p class="text-white">Create a stronger betting business with quality, hassle-free solutions and everything your business needs to prosper.</p>
         </div>
       </div>
@@ -228,7 +228,7 @@
           <img src="assets/img/why-4.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Localize efficiently</h3>
+          <h3 class="text-white">Local & Global</h3>
           <p class="text-white">Enter any market with our platform adapted for any region – 65+ languages, global and local payment methods, and localized content.</p>
         </div>
       </div>
@@ -239,7 +239,7 @@
           <img src="assets/img/why-5.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Get more than just a platform</h3>
+          <h3 class="text-white">Get more than the Game</h3>
           <p class="text-white">We’re interested in your success, therefore our industry-experienced team is ready to ensure your goals are achieved.</p>
         </div>
       </div>
@@ -250,7 +250,7 @@
           <img src="assets/img/why-6.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Grow faster</h3>
+          <h3 class="text-white">Grow the Business</h3>
           <p class="text-white">Achieve over 35% conversion. Benefit from our exceptional additional services and versatility to show even better results.</p>
         </div>
       </div>
@@ -442,27 +442,27 @@
     </div>
     <div class="col-md-7" style="padding-left: 90px;">
       <div class="col-md-12">
-      <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> VIRTUOSO OF BETTING AND CASINO PRODUCTS</div>
-        <h2 class="block_title" data-aos="fade-down">Our Products</h2>
+      <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>All Kinds of Game genres</div>
+        <h2 class="block_title" data-aos="fade-down">Our Specializations</h2>
         <p class="sec_mt">Experience and connect to an array of casino and sports betting products to bring more value to your betting and casino business today. From our awarded Sportsbook and a wide selection of slots to Live Casino games, Bingo and TOTO, we’ve got all you need to boost you to that next level.</p>
     </div>
     <div class="row" style="margin-top: 45px">
       <div class="col-md-6">
-        <h2 class="product_title">Usports</h2>
+        <h2 class="product_title">P2P Games</h2>
         <div class="w-100 d-flex" style="flex-wrap:wrap;">
-        <button class="btn-product tablinks" onmouseover="openCity(event, 'Sports')">Sports</button>
-        <button class="btn-product tablinks" onmouseover="openCity(event, 'Esports')">Esports</button>
-        <button class="btn-product tablinks" onmouseover="openCity(event, 'Virtual')">Virtual Sports</button>
-        <button class="btn-product tablinks" onmouseover="openCity(event, 'Non-sports')">Non-sports betting</button>
+        <button class="btn-product tablinks" onmouseover="openCity(event, 'Sports')">Cards</button>
+        <button class="btn-product tablinks" onmouseover="openCity(event, 'Esports')">Dice</button>
+        <button class="btn-product tablinks" onmouseover="openCity(event, 'Virtual')">Multiplayer</button>
+        <button class="btn-product tablinks" onmouseover="openCity(event, 'Non-sports')">Realtime strategy</button>
       </div>
       </div>
       <div class="col-md-6 ucasion_btn">
-        <h2 class="product_title">Ucasino</h2>
+        <h2 class="product_title">Game of Mass</h2>
         <div class="w-100 d-flex" style="flex-wrap:wrap;">
-        <button class="btn-product" onmouseover="openCity(event, 'Slots')">Slots</button>
-        <button class="btn-product" onmouseover="openCity(event, 'Live_Casino')">Live Casino</button>
-        <button class="btn-product" onmouseover="openCity(event, 'Additional')">Additional games</button>
-        <button class="btn-product" onmouseover="openCity(event, 'Skill-based')">Skill-based games</button>
+        <button class="btn-product" onmouseover="openCity(event, 'Slots')">Puzzlers</button>
+        <button class="btn-product" onmouseover="openCity(event, 'Live_Casino')">Party games</button>
+        <button class="btn-product" onmouseover="openCity(event, 'Additional')">Live</button>
+        <button class="btn-product" onmouseover="openCity(event, 'Skill-based')">Sessions</button>
       </div>
       </div>
     </div>
@@ -482,50 +482,50 @@
     <div class="row">
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>Back Office</h2>
+          <h2>Unmatched Graphics</h2>
           <p>Track the flow of funds and gain detailed reports on your customers and their actions.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>Bonus system</h2>
+          <h2>Lightweight Game</h2>
           <p>Attract new players and keep existing ones loyal with a wide selection of proven bonus tools.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>CRM</h2>
+          <h2>User Interactivity</h2>
           <p>Increase the profitability of your campaigns by gaining a deeper knowledge of your customers through in-depth analysis.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>CMS</h2>
+          <h2>Best Technology</h2>
           <p>Customize content to fit your brand, set notifications, and engage through personalized communication with the players.</p>
         </div>
       </div>
     
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>Affiliate Program</h2>
+          <h2>CRM & CMS</h2>
           <p>Boost traffic and entice more players with our intuitive and attractive affiliate programs.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>Agent Scheme</h2>
+          <h2>Bonus & Promotions</h2>
           <p>Create an efficient and multi-level structured system in any country, attract more players, and increase your revenue.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>Payment solutions</h2>
+          <h2>Affiliate & Agent</h2>
           <p>Increase accessibility with all currencies and 250+ payment solutions with flexible configuration.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
         <div class="w-100 turnkey_content back_office">
-          <h2>Two Support lines</h2>
+          <h2>Payment Solutions</h2>
           <p>24/7 professional customer support in over 31 languages when you need it.</p>
         </div>
       </div>
