--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <img src="assets/img/disk-svg.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Massive Games</h3>
+          <h3 class="text-white">Massive Games Delivery</h3>
           <p class="text-white">Offer an enormous assortment, with access to the most diverse selection of casino and slot games.</p>
         </div>
       </div>
@@ -215,7 +215,7 @@
           <img src="assets/img/why-3.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Delivery Be hassle free</h3>
+          <h3 class="text-white">Be hassle free</h3>
           <p class="text-white">Create a stronger betting business with quality, hassle-free solutions and everything your business needs to prosper.</p>
         </div>
       </div>
@@ -541,7 +541,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span> IT’S ALL ABOUT YOU</div>
-        <h2 class="block_title" data-aos="fade-down">Uplatform – solutions with a personal approach</h2>
+        <h2 class="block_title" data-aos="fade-down">Solutions with a personal approach</h2>
       </div>
       <div class="col-md-6">
         <div class="w-100">
@@ -555,16 +555,16 @@
       <div class="col-md-12">
         <ul id="counter" class="product_list d-flex p-0 justify-content-center years_industry" style="flex-wrap:wrap;">
               <li>
-                <strong class="count percent" data-count="3">0</strong>years in industry
+                <strong class="count percent" data-count="8">0</strong>years in industry
               </li>
               <li>
-                <strong class="count percent" data-count="50">0</strong>clients
+                <strong class="count percent" data-count="100">0</strong>Clients 
               </li>
               <li>
-                <strong class="count percent" data-count="153">0</strong>growth in 2021
+                <strong class="count percent" data-count="200">0</strong>Growth 
               </li>
               <li>
-                <strong class="count percent" data-count="300">0</strong>employees
+                <strong class="count percent" data-count="50">0</strong>Products
               </li>
             </ul>
       </div>
