--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="product_item product_item_active" id="Sports">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/sportsbook_big_icon-1.png" class="w-100" />
+            <img src="assets/img/cards.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Sports</h3>
@@ -293,7 +293,7 @@
         <div class="product_item" id="Esports">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/esports_big_icon.png" class="w-100" />
+            <img src="assets/img/dice.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Esports</h3>
@@ -316,7 +316,7 @@
         <div class="product_item" id="Virtual">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/virtual_sports_big_icon.png" class="w-100" />
+            <img src="assets/img/multiplayer.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Virtual sports</h3>
@@ -340,7 +340,7 @@
         <div class="product_item" id="Non-sports">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/nonsports_big_icon.png" class="w-100" />
+            <img src="assets/img/realtime-strategy.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Non-sports betting</h3>
@@ -355,7 +355,7 @@
       <div class="product_item product_item_ucasion" id="Slots">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/slots_big_icon.png" class="w-100" />
+            <img src="assets/img/puzzlers.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Slots</h3>
@@ -379,7 +379,7 @@
         <div class="product_item product_item_ucasion" id="Live_Casino">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/live_casino_big_icon.png" class="w-100" />
+            <img src="assets/img/party-games.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Live Casino</h3>
@@ -402,7 +402,7 @@
         <div class="product_item product_item_ucasion" id="Additional">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/additional_games_big_icon.png" class="w-100" />
+            <img src="assets/img/live.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Additional games</h3>
@@ -426,7 +426,7 @@
         <div class="product_item product_item_ucasion" id="Skill-based">
           <div class="product_item_full">
           <div class="product_img">
-            <img src="assets/img/nonsports_big_icon.png" class="w-100" />
+            <img src="assets/img/sessions.png" class="w-100" />
           </div>
           <div class="product_content">
             <h3>Skill-based games</h3>
