--- a/index.html
+++ b/index.html
@@ -139,11 +139,13 @@
     <div class="col-md-4" data-aos="fade-right">
       <div class="w-100 turnkey_content">
         <h2><span><img src="assets/img/turnkey-svg.svg"></span>Mobile Games</h2>
-        <p>Build a profitable and stable brand with an all-in-one solution:</p>
+        <p>Launch an outstanding mobile game app</p>
         <ul class="sec_list">
-          <li>Build a profitable and stable brand with an all-in-one solution:</li>
-          <li>Expansive portfolio: 182 sports, 16,000+ slots, 110 in-house games, over 700 esports and events, and 120+ live casino tables.</li>
-          <li>Marketing, administrative, and managed services – to make project management more efficient and profitable.</li>
+          <li>With best graphics</li>
+          <li>Unmatched user experience</li>
+          <li>Optimized app purformance</li>
+          <li>Minimum in size</li>
+          <li>Quick delivery & launch </li>
         </ul>
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
@@ -152,11 +154,12 @@
     <div class="col-md-4" data-aos="fade-up">
       <div class="w-100 turnkey_content">
         <h2><span><img src="assets/img/api-svg.svg"></span>HTML5 Games</h2>
-        <p>Want to expand your existing project? Our effective sportsboook API will provide you:</p>
+        <p>HTML5 games are easy to play</p>
         <ul class="sec_list">
-          <li>Quick, straightforward and seamless API integration.</li>
-          <li>Customizable and modifiable solution, that allows you to choose your own content.</li>
-          <li>Massive sportsbook: Variety of bet types, a wide range of odds, the largest number of classic and unique sports and events.</li>
+          <li>Offer players to play from any browser</li>
+          <li>No install games</li>
+          <li>Lightweight & Quick</li>
+          <li>Build with most advanced framework</li>
         </ul>
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
@@ -164,11 +167,12 @@
     <div class="col-md-4" data-aos="fade-left">
       <div class="w-100 turnkey_content">
         <h2><span><img src="assets/img/Frame-body.svg"></span>Desktop Games</h2>
-        <p>Take advantage of our knowledge of retail betting and the most comprehensive software:</p>
+        <p>Offer players the traditional way to play games</p>
         <ul class="sec_list">
-          <li>Complete software package and tools to operate land-based betting shops.</li>
-          <li>Multi-lingual and multi-featured software for cashiers, self-betting terminals, ePOS terminals, a live monitor, and a powerful back-office tool.</li>
-          <li>Greatest selection of sports, events, markets, Keno, Loto, and Virtual sports.</li>
+          <li>Easy to download and install on PC</li>
+          <li>Games for MAC users</li>
+          <li>Experice the power of desktop graphics</li>
+          <li>Games in High Defination</li>
         </ul>
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
@@ -194,7 +198,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Ultimate Expertise</h3>
-          <p class="text-white">Attract all playing preferences with the most extensive coverage of sports, events, and markets. Let them bet on almost anything.</p>
+          <p class="text-white">Get your gaming productes built by team with years of experinces and business expertice of more than 50 different kinds of games</p>
         </div>
       </div>
     </div>
@@ -204,8 +208,8 @@
           <img src="assets/img/disk-svg.svg" alt="Ultimate sportsbook" />
         </div>
         <div class="sportsbook_content">
-          <h3 class="text-white">Massive Games Delivery</h3>
-          <p class="text-white">Offer an enormous assortment, with access to the most diverse selection of casino and slot games.</p>
+          <h3 class="text-white">Quick Games Delivery</h3>
+          <p class="text-white">Gaming products built and delivered with fast speed keeping performance, security & playing experince on top priority</p>
         </div>
       </div>
     </div>
@@ -216,7 +220,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Be hassle free</h3>
-          <p class="text-white">Create a stronger betting business with quality, hassle-free solutions and everything your business needs to prosper.</p>
+          <p class="text-white">A game built by us, is also managed by us You can focus on business & revenue we will focus on the game software & its performance</p>
         </div>
       </div>
     </div>
@@ -229,7 +233,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Local & Global</h3>
-          <p class="text-white">Enter any market with our platform adapted for any region – 65+ languages, global and local payment methods, and localized content.</p>
+          <p class="text-white">With a deep knowledge of local & global market our product building process always focus multiple markets</p>
         </div>
       </div>
     </div>
@@ -240,7 +244,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Get more than the Game</h3>
-          <p class="text-white">We’re interested in your success, therefore our industry-experienced team is ready to ensure your goals are achieved.</p>
+          <p class="text-white">Expertise, Experience & Support We not just deliver a game What we offer is a complete business solution</p>
         </div>
       </div>
     </div>
@@ -251,7 +255,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Grow the Business</h3>
-          <p class="text-white">Achieve over 35% conversion. Benefit from our exceptional additional services and versatility to show even better results.</p>
+          <p class="text-white">We believe, our growth is always linked with your business growth. So our growth plan starts from your growth plan</p>
         </div>
       </div>
     </div>
