--- a/index.html
+++ b/index.html
@@ -141,11 +141,7 @@
         <h2><span><img src="assets/img/turnkey-svg.svg"></span>Mobile Games</h2>
         <p>Launch an outstanding mobile game app</p>
         <ul class="sec_list">
-          <li>With best graphics</li>
-          <li>Unmatched user experience</li>
-          <li>Optimized app purformance</li>
-          <li>Minimum in size</li>
-          <li>Quick delivery & launch </li>
+          <li>With best graphics Unmatched user experience Optimized app performance Minimum in size Quick delivery & launch</li>
         </ul>
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
@@ -156,10 +152,7 @@
         <h2><span><img src="assets/img/api-svg.svg"></span>HTML5 Games</h2>
         <p>HTML5 games are easy to play</p>
         <ul class="sec_list">
-          <li>Offer players to play from any browser</li>
-          <li>No install games</li>
-          <li>Lightweight & Quick</li>
-          <li>Build with most advanced framework</li>
+          <li>Offer players to play from any browser No install games Lightweight & Quick Build with most advanced framework</li>
         </ul>
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
@@ -169,10 +162,7 @@
         <h2><span><img src="assets/img/Frame-body.svg"></span>Desktop Games</h2>
         <p>Offer players the traditional way to play games</p>
         <ul class="sec_list">
-          <li>Easy to download and install on PC</li>
-          <li>Games for MAC users</li>
-          <li>Experice the power of desktop graphics</li>
-          <li>Games in High Defination</li>
+          <li>Easy to download and install on PC Games for MAC users Experience the power of desktop graphics Games in High Defination</li>
         </ul>
         <button class="btn_all">Learn more <img src="assets/img/arrow-next.png"></button>
       </div>
@@ -198,7 +188,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Ultimate Expertise</h3>
-          <p class="text-white">Get your gaming productes built by team with years of experinces and business expertice of more than 50 different kinds of games</p>
+          <p class="text-white">Get your gaming products built by team with years of experiences and business expertise of more than 50 different kinds of games</p>
         </div>
       </div>
     </div>
@@ -209,7 +199,7 @@
         </div>
         <div class="sportsbook_content">
           <h3 class="text-white">Quick Games Delivery</h3>
-          <p class="text-white">Gaming products built and delivered with fast speed keeping performance, security & playing experince on top priority</p>
+          <p class="text-white">Gaming products built and delivered with fast speed keeping performance, security & playing experience on top priority</p>
         </div>
       </div>
     </div>
@@ -448,7 +438,7 @@
       <div class="col-md-12">
       <div class="sub-title" data-aos="fade-up"> <span class="color-accent"></span>All Kinds of Game genres</div>
         <h2 class="block_title" data-aos="fade-down">Our Specializations</h2>
-        <p class="sec_mt">Experience and connect to an array of casino and sports betting products to bring more value to your betting and casino business today. From our awarded Sportsbook and a wide selection of slots to Live Casino games, Bingo and TOTO, we’ve got all you need to boost you to that next level.</p>
+        <p class="sec_mt">Experience and connect to a team producing outstanding games to bring more value to your gaming business. From our awarded games and a wide selection of customized game options, we’ve got all you need to boost you to that next level.</p>
     </div>
     <div class="row" style="margin-top: 45px">
       <div class="col-md-6">
